:herb: Use `denops_test` module instead

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,5 @@
 name: test
 
-env:
-  DENOPS_PATH: "../denops.vim"
-
 on:
   schedule:
     - cron: "0 7 * * 0"
@@ -105,6 +102,6 @@ jobs:
         working-directory: ./repo
         run: make test
         env:
-          DENOPS_TEST_VIM: ${{ steps.vim.outputs.executable_path }}
-          DENOPS_TEST_NVIM: ${{ steps.nvim.outputs.executable }}
-        timeout-minutes: 5
+          DENOPS_TEST_DENOPS_PATH: "../denops.vim"
+          DENOPS_TEST_VIM_EXECUTABLE: ${{ steps.vim.outputs.executable_path }}
+          DENOPS_TEST_NVIM_EXECUTABLE: ${{ steps.nvim.outputs.executable }}
