--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,4 @@
 {
-  "lock": false,
   "exclude": [
     "docs/**",
     ".coverage/**"
@@ -8,7 +7,7 @@
     "check": "deno check ./**/*.ts",
     "test": "deno test -A --parallel --shuffle --doc",
     "test:coverage": "deno task test --coverage=.coverage",
-    "coverage": "deno coverage .coverage --exclude=cli.ts --exclude=worker.ts --exclude=testdata/",
+    "coverage": "deno coverage .coverage",
     "update": "deno run --allow-env --allow-read --allow-write --allow-run=git,deno --allow-net=jsr.io,registry.npmjs.org jsr:@molt/cli **/*.ts",
     "update:write": "deno task -q update --write",
     "update:commit": "deno task -q update --commit --prefix :package: --pre-commit=fmt,lint"
