:herb: Use sandbox for git working directory tests

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,7 +5,7 @@
   ],
   "tasks": {
     "check": "deno check ./**/*.ts",
-    "test": "deno test -A --parallel --shuffle --doc",
+    "test": "deno test -A --shuffle --doc",
     "test:coverage": "deno task test --coverage=.coverage",
     "coverage": "deno coverage .coverage",
     "update": "deno run --allow-env --allow-read --allow-write --allow-run=git,deno --allow-net=jsr.io,registry.npmjs.org jsr:@molt/cli **/*.ts",
