--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,6 +72,11 @@ jobs:
       - run: git config --global core.autocrlf false
         if: runner.os == 'Windows'
 
+      - run: |
+          git config --global user.email "github-action@example.com"
+          git config --global user.name "GitHub Action"
+          git version
+
       - uses: actions/checkout@v4
 
       - uses: denoland/setup-deno@v1.1.4
