--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,11 @@ on:
   workflow_dispatch:
     inputs:
       denops_branch:
-        description: "Denops revision to test"
+        description: "Denops branch to test"
         required: false
         default: "main"
 
+# Use 'bash' as default shell even on Windows
 defaults:
   run:
     shell: bash --noprofile --norc -eo pipefail {0}
@@ -31,13 +32,13 @@ jobs:
         runner:
           - ubuntu-latest
         deno_version:
-          - "1.x"
+          - "2.x"
     runs-on: ${{ matrix.runner }}
     steps:
       - run: git config --global core.autocrlf false
         if: runner.os == 'Windows'
       - uses: actions/checkout@v4
-      - uses: denoland/setup-deno@v1.1.4
+      - uses: denoland/setup-deno@v2
         with:
           deno-version: "${{ matrix.deno_version }}"
       - uses: actions/cache@v4
@@ -66,22 +67,18 @@ jobs:
         host_version:
           - vim: "v9.1.0448"
             nvim: "v0.10.0"
+
     runs-on: ${{ matrix.runner }}
-    timeout-minutes: 15
+
     steps:
       - run: git config --global core.autocrlf false
         if: runner.os == 'Windows'
 
-      - run: |
-          git config --global user.email "github-action@example.com"
-          git config --global user.name "GitHub Action"
-          git version
-
       - uses: actions/checkout@v4
 
-      - uses: denoland/setup-deno@v1.1.4
+      - uses: denoland/setup-deno@v1
         with:
-          deno-version: "${{ matrix.deno_version }}"
+          deno-version: ${{ matrix.deno_version }}
 
       - name: Get denops
         run: |
@@ -96,13 +93,13 @@ jobs:
       - uses: rhysd/action-setup-vim@v1
         id: vim
         with:
-          version: "${{ matrix.host_version.vim }}"
+          version: ${{ matrix.host_version.vim }}
 
       - uses: rhysd/action-setup-vim@v1
         id: nvim
         with:
           neovim: true
-          version: "${{ matrix.host_version.nvim }}"
+          version: ${{ matrix.host_version.nvim }}
 
       - name: Export executables
         run: |
@@ -117,7 +114,8 @@ jobs:
 
       - name: Perform pre-cache
         run: |
-          deno cache ${DENOPS_TEST_DENOPS_PATH}/denops/@denops-private/mod.ts ./denops/gin/main.ts
+          deno cache --config ${DENOPS_TEST_DENOPS_PATH}/denops/@denops-private/deno.jsonc ${DENOPS_TEST_DENOPS_PATH}/denops/@denops-private/mod.ts
+          deno cache ./denops/gin/main.ts
 
       - name: Test
         run: deno task test:coverage
