--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,12 +118,21 @@ jobs:
 
       - name: Test
         run: deno task test:coverage
+        if: runner.os != 'Windows'
+        timeout-minutes: 15
+
+      # SEE: https://github.com/denoland/deno/issues/30924
+      - name: Test (without coverage)
+        run: deno task test
+        if: runner.os == 'Windows'
         timeout-minutes: 15
 
       - run: |
           deno task coverage --lcov > coverage.lcov
+        if: runner.os != 'Windows'
 
       - uses: codecov/codecov-action@v4
+        if: runner.os != 'Windows'
         with:
           os: ${{ runner.os }}
           files: ./coverage.lcov
